--- a/app/assets/stylesheets/_scrollbar.scss
+++ b/app/assets/stylesheets/_scrollbar.scss
@@ -1,3 +1,13 @@
+@mixin minimal_scrollbar() {
+  overflow-x: hidden;
+  overflow-y: hidden;
+
+  &:hover {
+    overflow-y: auto;
+    overflow-y: overlay;
+  }
+}
+
 @mixin scrollbars(
   $size,
   $foreground-color,
